# csv-cleaner

./: ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
api/: app.py
cleaner/: __init__.py  cli.py  config.py  engine.py  pipeline.py  report.py  writers.py
cleaner/loaders/: __init__.py  csv_loader.py  factory.py  xlsx_loader.py
configs/: example.json  example_standardize_phone_zip_state.json  example_validation_and_more.json  messy_contacts_500_config.json
csv-cleaner/: .gitignore
csv-cleaner/api/: __init__.py  app.py
csv-cleaner/cleaner/: config.py  engine.py
csv-cleaner/cleaner/loaders/: factory.py  json_loader.py  yaml_loader.py
csv-cleaner/configs/: example_all_modules.json  example_messy_contacts_500.json  law_firm_leads.json
csv-cleaner/data/: messy_contacts_500.csv  sample_contacts.csv  sample_contacts_cleaned.csv  sample_contacts_report.json
csv-cleaner/inputs/: DC_RAW.csv
csv-cleaner/modules/core/: __init__.py  drop_columns.py  drop_empty.py  drop_rows_missing_required.py
csv-cleaner/presets/: crm.json  scrape.json
data/: sample.csv  sample_contacts_report.json  sample_contacts_summary.txt
modules/: __init__.py
modules/core/: drop_columns.py  drop_empty_columns.py  drop_rows_missing_required.py  fill_nulls.py  rename_columns.py  select_columns.py
modules/dedupe/: drop_duplicates.py
modules/text/: normalize_case.py  normalize_empty_strings.py  replace_values.py  trim_whitespace.py
modules/validation/: __init__.py  coerce_numeric.py  standardize_phone.py  standardize_state.py
output/: .gitkeep
presets/: leads.json
(+23 files in other folders)
